# rabotanewalkrabotawork

./: CMakeLists.txt  adding_data.h  coefs_definition.h  encoder.h  function_1logplot.h  function_1plot.h  function_2plots.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
